[gd_scene load_steps=12 format=2]

[ext_resource path="res://Node2D.gd" type="Script" id=1]
[ext_resource path="res://Assets/Player/idle/anim1.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Control.gd" type="Script" id=3]
[ext_resource path="res://Font/kenvector_future.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 26
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 25
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 25
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
size = 25
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=5]
size = 25
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=6]
size = 25
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=7]
size = 35
font_data = ExtResource( 4 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 468.499, 292.203 )
scale = Vector2( 141.404, 68.6543 )
texture = ExtResource( 2 )

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 3 )

[node name="Label" type="Label" parent="Control"]
visible = false
margin_left = 270.0
margin_top = 13.6361
margin_right = 708.723
margin_bottom = 70.6361
custom_fonts/font = SubResource( 1 )
text = "BRIGHTSOULS"
align = 1

[node name="Label2" type="Label" parent="Control"]
visible = false
margin_left = 277.981
margin_top = 109.16
margin_right = 692.872
margin_bottom = 234.16
custom_fonts/font = SubResource( 2 )
text = "Muito tempo atrás
um heroi chamado
evil veio a este mundo
"
align = 1

[node name="Label3" type="Label" parent="Control"]
visible = false
margin_left = 277.981
margin_top = 206.774
margin_right = 718.218
margin_bottom = 267.774
custom_fonts/font = SubResource( 3 )
text = "Para denunciar os males
da verdade e do amor"
align = 1

[node name="Label4" type="Label" parent="Control"]
visible = false
margin_left = 277.981
margin_top = 269.323
margin_right = 675.501
margin_bottom = 362.323
custom_fonts/font = SubResource( 4 )
text = "e crescer até que
seu poder alcance as
estrelas"
align = 1

[node name="Label5" type="Label" parent="Control"]
visible = false
margin_left = 277.981
margin_top = 366.004
margin_right = 759.981
margin_bottom = 395.004
custom_fonts/font = SubResource( 5 )
text = "há só uma coisa que o impede"
align = 1

[node name="Label6" type="Label" parent="Control"]
visible = false
margin_left = 207.981
margin_top = 405.177
margin_right = 787.183
margin_bottom = 466.177
custom_fonts/font = SubResource( 6 )
text = "coisa, pois aquele ser não pode 
ser um simples animal"
align = 1

[node name="Button" type="Button" parent="Control"]
visible = false
margin_left = 381.565
margin_top = 506.164
margin_right = 576.565
margin_bottom = 552.164
rect_scale = Vector2( 1.25661, 1.03053 )
custom_fonts/font = SubResource( 7 )
text = "Começo"

[node name="Timer" type="Timer" parent="Control"]
[connection signal="pressed" from="Control/Button" to="." method="_on_Button_pressed"]
[connection signal="timeout" from="Control/Timer" to="Control" method="_on_Timer_timeout"]
